[gd_scene load_steps=2 format=3 uid="uid://cn3cfy0gvxct"]

[ext_resource type="Script" uid="uid://bjpbtjkipiys1" path="res://Scripts/title_screen.gd" id="1_klylv"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klylv")

[node name="TitleLine1" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -251.5
offset_right = 251.5
offset_bottom = 137.0
grow_horizontal = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 100
text = "The Veil of"
horizontal_alignment = 1

[node name="TitleLine2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -327.5
offset_top = 65.0
offset_right = 327.5
offset_bottom = 338.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 200
text = "Aether"

[node name="Buttons" type="GridContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -40.0
offset_right = 250.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartBtn" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="CreditsBtn" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="QuitBtn" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="Buttons/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="Buttons/CreditsBtn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="Buttons/QuitBtn" to="." method="_on_quit_btn_pressed"]
